# GRGImage

./: .gitignore  README.md
examples/: exampleA.sh  exampleB.sh
examples/data/: glasses_width1200_height748.csv  zebra_width800_height686.csv
src/: CMakeLists.txt  GNU_plot.gpi  grg.cpp  grg.hpp  main.cpp  main.hpp
